// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartVoronoiContainer 1`] = `
<VictoryLine
  containerComponent={
    <VictoryContainer
      className="VictoryContainer"
      portalComponent={<Portal />}
      portalZIndex={99}
      responsive={true}
    />
  }
  dataComponent={
    <Curve
      pathComponent={<Path />}
    />
  }
  groupComponent={
    <VictoryClipContainer
      circleComponent={<Circle />}
      clipPathComponent={<ClipPath />}
      groupComponent={<g />}
      rectComponent={<Rect />}
    />
  }
  labelComponent={
    <VictoryLabel
      capHeight={0.71}
      direction="inherit"
      lineHeight={1}
      renderInPortal={true}
      textComponent={<Text />}
      tspanComponent={<TSpan />}
    />
  }
  samples={50}
  scale="linear"
  sortKey="x"
  sortOrder="ascending"
  standalone={true}
  theme={
    Object {
      "area": Object {
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "data": Object {
            "fill": "#bee1f4",
            "fillOpacity": 0.4,
            "stroke": "#39a5dc",
            "strokeWidth": 2,
          },
          "labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 451,
      },
      "axis": Object {
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "axis": Object {
            "fill": "transparent",
            "stroke": "#72767b",
            "strokeLinecap": "round",
            "strokeLinejoin": "round",
            "strokeWidth": 1,
          },
          "axisLabel": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 100,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
          "grid": Object {
            "fill": "none",
            "pointerEvents": "painted",
            "stroke": "none",
          },
          "tickLabels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
          },
          "ticks": Object {
            "fill": "transparent",
            "size": 1,
            "stroke": "transparent",
          },
        },
        "width": 451,
      },
      "bar": Object {
        "barWidth": 10,
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "data": Object {
            "stroke": "none",
          },
          "labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
          },
        },
        "width": 451,
      },
      "boxplot": Object {
        "boxWidth": 20,
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "max": Object {
            "padding": 8,
            "stroke": "#39a5dc",
            "strokeWidth": 1,
          },
          "maxLabels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
          },
          "median": Object {
            "padding": 8,
            "stroke": "#39a5dc",
            "strokeWidth": 1,
          },
          "medianLabels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
          },
          "min": Object {
            "padding": 8,
            "stroke": "#39a5dc",
            "strokeWidth": 1,
          },
          "minLabels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
          },
          "q1": Object {
            "fill": "#bee1f4",
            "padding": 8,
          },
          "q1Labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
          },
          "q3": Object {
            "fill": "#bee1f4",
            "padding": 8,
          },
          "q3Labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
          },
        },
        "width": 451,
      },
      "candlestick": Object {
        "candleColors": Object {
          "negative": "#39a5dc",
          "positive": "#bee1f4",
        },
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "data": Object {
            "stroke": "#39a5dc",
            "strokeWidth": 1,
          },
          "labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 451,
      },
      "chart": Object {
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "parent": Object {
            "border": "1px solid #bee1f4",
          },
        },
        "width": 451,
      },
      "errorbar": Object {
        "borderWidth": 8,
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "data": Object {
            "fill": "transparent",
            "stroke": "#39a5dc",
            "strokeWidth": 2,
          },
          "labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 451,
      },
      "group": Object {
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "width": 451,
      },
      "legend": Object {
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "gutter": 20,
        "orientation": "horizontal",
        "style": Object {
          "data": Object {
            "type": "square",
          },
          "labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
          },
          "title": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 2,
            "stroke": "transparent",
          },
        },
        "titleOrientation": "top",
      },
      "line": Object {
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "data": Object {
            "fill": "transparent",
            "stroke": "#39a5dc",
            "strokeWidth": 2,
          },
          "labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 451,
      },
      "pie": Object {
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "padding": 20,
        "style": Object {
          "data": Object {
            "padding": 8,
            "stroke": "transparent",
            "strokeWidth": 1,
          },
          "labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 8,
            "stroke": "transparent",
          },
        },
      },
      "scatter": Object {
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "data": Object {
            "fill": "#bee1f4",
            "stroke": "transparent",
            "strokeWidth": 0,
          },
          "labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 451,
      },
      "stack": Object {
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "data": Object {
            "stroke": "#fff",
            "strokeWidth": 1,
          },
        },
        "width": 451,
      },
      "tooltip": Object {
        "cornerRadius": 0,
        "flyoutStyle": Object {
          "cornerRadius": 0,
          "fill": "#fff",
          "pointerEvents": "none",
          "stroke": "#282d33",
          "strokeWidth": 1,
        },
        "pointerLength": 10,
        "style": Object {
          "fill": "#fff",
          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
          "fontSize": 14,
          "letterSpacing": "normal",
          "padding": 8,
          "pointerEvents": "none",
          "stroke": "#282d33",
          "textAnchor": "middle",
        },
      },
      "voronoi": Object {
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "data": Object {
            "fill": "transparent",
            "stroke": "transparent",
            "strokeWidth": 0,
          },
          "flyout": Object {
            "fill": "#fff",
            "pointerEvents": "none",
            "strokeWidth": 1,
          },
          "labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 8,
            "pointerEvents": "none",
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 451,
      },
    }
  }
/>
`;

exports[`ChartVoronoiContainer 2`] = `
<VictoryLine
  containerComponent={
    <VictoryContainer
      className="VictoryContainer"
      portalComponent={<Portal />}
      portalZIndex={99}
      responsive={true}
    />
  }
  dataComponent={
    <Curve
      pathComponent={<Path />}
    />
  }
  groupComponent={
    <VictoryClipContainer
      circleComponent={<Circle />}
      clipPathComponent={<ClipPath />}
      groupComponent={<g />}
      rectComponent={<Rect />}
    />
  }
  labelComponent={
    <VictoryLabel
      capHeight={0.71}
      direction="inherit"
      lineHeight={1}
      renderInPortal={true}
      textComponent={<Text />}
      tspanComponent={<TSpan />}
    />
  }
  samples={50}
  scale="linear"
  sortKey="x"
  sortOrder="ascending"
  standalone={true}
  theme={
    Object {
      "area": Object {
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "data": Object {
            "fill": "#bee1f4",
            "fillOpacity": 0.4,
            "stroke": "#39a5dc",
            "strokeWidth": 2,
          },
          "labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 451,
      },
      "axis": Object {
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "axis": Object {
            "fill": "transparent",
            "stroke": "#72767b",
            "strokeLinecap": "round",
            "strokeLinejoin": "round",
            "strokeWidth": 1,
          },
          "axisLabel": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 100,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
          "grid": Object {
            "fill": "none",
            "pointerEvents": "painted",
            "stroke": "none",
          },
          "tickLabels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
          },
          "ticks": Object {
            "fill": "transparent",
            "size": 1,
            "stroke": "transparent",
          },
        },
        "width": 451,
      },
      "bar": Object {
        "barWidth": 10,
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "data": Object {
            "stroke": "none",
          },
          "labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
          },
        },
        "width": 451,
      },
      "boxplot": Object {
        "boxWidth": 20,
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "max": Object {
            "padding": 8,
            "stroke": "#39a5dc",
            "strokeWidth": 1,
          },
          "maxLabels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
          },
          "median": Object {
            "padding": 8,
            "stroke": "#39a5dc",
            "strokeWidth": 1,
          },
          "medianLabels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
          },
          "min": Object {
            "padding": 8,
            "stroke": "#39a5dc",
            "strokeWidth": 1,
          },
          "minLabels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
          },
          "q1": Object {
            "fill": "#bee1f4",
            "padding": 8,
          },
          "q1Labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
          },
          "q3": Object {
            "fill": "#bee1f4",
            "padding": 8,
          },
          "q3Labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
          },
        },
        "width": 451,
      },
      "candlestick": Object {
        "candleColors": Object {
          "negative": "#39a5dc",
          "positive": "#bee1f4",
        },
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "data": Object {
            "stroke": "#39a5dc",
            "strokeWidth": 1,
          },
          "labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 451,
      },
      "chart": Object {
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "parent": Object {
            "border": "1px solid #bee1f4",
          },
        },
        "width": 451,
      },
      "errorbar": Object {
        "borderWidth": 8,
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "data": Object {
            "fill": "transparent",
            "stroke": "#39a5dc",
            "strokeWidth": 2,
          },
          "labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 451,
      },
      "group": Object {
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "width": 451,
      },
      "legend": Object {
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "gutter": 20,
        "orientation": "horizontal",
        "style": Object {
          "data": Object {
            "type": "square",
          },
          "labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
          },
          "title": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 2,
            "stroke": "transparent",
          },
        },
        "titleOrientation": "top",
      },
      "line": Object {
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "data": Object {
            "fill": "transparent",
            "stroke": "#39a5dc",
            "strokeWidth": 2,
          },
          "labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 451,
      },
      "pie": Object {
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "padding": 20,
        "style": Object {
          "data": Object {
            "padding": 8,
            "stroke": "transparent",
            "strokeWidth": 1,
          },
          "labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 8,
            "stroke": "transparent",
          },
        },
      },
      "scatter": Object {
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "data": Object {
            "fill": "#bee1f4",
            "stroke": "transparent",
            "strokeWidth": 0,
          },
          "labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 451,
      },
      "stack": Object {
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "data": Object {
            "stroke": "#fff",
            "strokeWidth": 1,
          },
        },
        "width": 451,
      },
      "tooltip": Object {
        "cornerRadius": 0,
        "flyoutStyle": Object {
          "cornerRadius": 0,
          "fill": "#fff",
          "pointerEvents": "none",
          "stroke": "#282d33",
          "strokeWidth": 1,
        },
        "pointerLength": 10,
        "style": Object {
          "fill": "#fff",
          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
          "fontSize": 14,
          "letterSpacing": "normal",
          "padding": 8,
          "pointerEvents": "none",
          "stroke": "#282d33",
          "textAnchor": "middle",
        },
      },
      "voronoi": Object {
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "data": Object {
            "fill": "transparent",
            "stroke": "transparent",
            "strokeWidth": 0,
          },
          "flyout": Object {
            "fill": "#fff",
            "pointerEvents": "none",
            "strokeWidth": 1,
          },
          "labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 8,
            "pointerEvents": "none",
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 451,
      },
    }
  }
/>
`;

exports[`renders container via ChartGroup 1`] = `
<VictoryGroup
  containerComponent={<ChartLine />}
  groupComponent={<g />}
  height={200}
  samples={50}
  scale="linear"
  sortOrder="ascending"
  standalone={true}
  theme={
    Object {
      "area": Object {
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "data": Object {
            "fill": "#bee1f4",
            "fillOpacity": 0.4,
            "stroke": "#39a5dc",
            "strokeWidth": 2,
          },
          "labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 451,
      },
      "axis": Object {
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "axis": Object {
            "fill": "transparent",
            "stroke": "#72767b",
            "strokeLinecap": "round",
            "strokeLinejoin": "round",
            "strokeWidth": 1,
          },
          "axisLabel": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 100,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
          "grid": Object {
            "fill": "none",
            "pointerEvents": "painted",
            "stroke": "none",
          },
          "tickLabels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
          },
          "ticks": Object {
            "fill": "transparent",
            "size": 1,
            "stroke": "transparent",
          },
        },
        "width": 451,
      },
      "bar": Object {
        "barWidth": 10,
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "data": Object {
            "stroke": "none",
          },
          "labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
          },
        },
        "width": 451,
      },
      "boxplot": Object {
        "boxWidth": 20,
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "max": Object {
            "padding": 8,
            "stroke": "#39a5dc",
            "strokeWidth": 1,
          },
          "maxLabels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
          },
          "median": Object {
            "padding": 8,
            "stroke": "#39a5dc",
            "strokeWidth": 1,
          },
          "medianLabels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
          },
          "min": Object {
            "padding": 8,
            "stroke": "#39a5dc",
            "strokeWidth": 1,
          },
          "minLabels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
          },
          "q1": Object {
            "fill": "#bee1f4",
            "padding": 8,
          },
          "q1Labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
          },
          "q3": Object {
            "fill": "#bee1f4",
            "padding": 8,
          },
          "q3Labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
          },
        },
        "width": 451,
      },
      "candlestick": Object {
        "candleColors": Object {
          "negative": "#39a5dc",
          "positive": "#bee1f4",
        },
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "data": Object {
            "stroke": "#39a5dc",
            "strokeWidth": 1,
          },
          "labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 451,
      },
      "chart": Object {
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "parent": Object {
            "border": "1px solid #bee1f4",
          },
        },
        "width": 451,
      },
      "errorbar": Object {
        "borderWidth": 8,
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "data": Object {
            "fill": "transparent",
            "stroke": "#39a5dc",
            "strokeWidth": 2,
          },
          "labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 451,
      },
      "group": Object {
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "width": 451,
      },
      "legend": Object {
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "gutter": 20,
        "orientation": "horizontal",
        "style": Object {
          "data": Object {
            "type": "square",
          },
          "labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
          },
          "title": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 2,
            "stroke": "transparent",
          },
        },
        "titleOrientation": "top",
      },
      "line": Object {
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "data": Object {
            "fill": "transparent",
            "stroke": "#39a5dc",
            "strokeWidth": 2,
          },
          "labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 451,
      },
      "pie": Object {
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "padding": 20,
        "style": Object {
          "data": Object {
            "padding": 8,
            "stroke": "transparent",
            "strokeWidth": 1,
          },
          "labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 8,
            "stroke": "transparent",
          },
        },
      },
      "scatter": Object {
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "data": Object {
            "fill": "#bee1f4",
            "stroke": "transparent",
            "strokeWidth": 0,
          },
          "labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 10,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 451,
      },
      "stack": Object {
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "data": Object {
            "stroke": "#fff",
            "strokeWidth": 1,
          },
        },
        "width": 451,
      },
      "tooltip": Object {
        "cornerRadius": 0,
        "flyoutStyle": Object {
          "cornerRadius": 0,
          "fill": "#fff",
          "pointerEvents": "none",
          "stroke": "#282d33",
          "strokeWidth": 1,
        },
        "pointerLength": 10,
        "style": Object {
          "fill": "#fff",
          "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
          "fontSize": 14,
          "letterSpacing": "normal",
          "padding": 8,
          "pointerEvents": "none",
          "stroke": "#282d33",
          "textAnchor": "middle",
        },
      },
      "voronoi": Object {
        "colorScale": Array [
          "#007bba",
          "#bee1f4",
          "#39a5dc",
          "#0066ff",
        ],
        "height": 301,
        "padding": 8,
        "style": Object {
          "data": Object {
            "fill": "transparent",
            "stroke": "transparent",
            "strokeWidth": 0,
          },
          "flyout": Object {
            "fill": "#fff",
            "pointerEvents": "none",
            "strokeWidth": 1,
          },
          "labels": Object {
            "fill": "#282d33",
            "fontFamily": "'Gill Sans', 'Gill Sans MT', 'Ser­avek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 8,
            "pointerEvents": "none",
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 451,
      },
    }
  }
  width={200}
>
  <Chart
    data={
      Array [
        Object {
          "name": "Cats",
          "x": 1,
          "y": 1,
        },
        Object {
          "name": "Cats",
          "x": 2,
          "y": 2,
        },
        Object {
          "name": "Cats",
          "x": 3,
          "y": 3.2,
        },
        Object {
          "name": "Cats",
          "x": 4,
          "y": 3.5,
        },
      ]
    }
  />
  <Chart
    data={
      Array [
        Object {
          "name": "Dogs",
          "x": 1,
          "y": 0.5,
        },
        Object {
          "name": "Dogs",
          "x": 2,
          "y": 1,
        },
        Object {
          "name": "Dogs",
          "x": 3,
          "y": 2,
        },
        Object {
          "name": "Dogs",
          "x": 4,
          "y": 2.5,
        },
        Object {
          "name": "Dogs",
          "x": 5,
          "y": 2.5,
        },
      ]
    }
  />
</VictoryGroup>
`;
